<resources>
    <string name="app_name">경동원 홈네트워크</string>
    <string name="app_product">COPYRIGHT (C) 2013 KYUNGDONG ONE CO.LTD ALL RIGHT RESERVED.</string>
    <string name="progress_request">처리 중...</string>
    <string name="Popup_confirm">확인</string>
    <string name="Popup_cancel">취소</string>
    <string name="Popup_control_error_contents">월패드 연결을 확인해주십시오.</string>
    <string name="Popup_info_error_contents">에러가 발생하였습니다.</string>
    <string name="Complex_checkbox_title">단지정보 저장</string>
    <string name="Complex_textbox_hint_search">단지명을 입력해주세요.</string>
    <string name="Complex_popup_title">단지선택</string>
    <string name="Complex_popup_contents">단지를 선택해주십시오.</string>
    <string name="Complex_popup_error_title">알림</string>
    <string name="Complex_popup_error_contents">단지서버 리스트 요청에 실패 하였습니다.\n저장된 단지 정보로 불러옵니다.\n(접속 이력이 없을경우, 단지정보가 표시되지 않습니다.)</string>
    <string name="Complex_toast_out">종료하시려면 한번 더 누르세요.</string>
    <string name="Permission_progress_token">푸시 키 조회 중 입니다...</string>
    <string name="Permission_popup_title">홈톡 앱 접근 권한 안내</string>
    <string name="Permission_popup_ticker">필수 접근 권한</string>
    <string name="Permission_popup_contents01_title">저장 공간</string>
    <string name="Permission_popup_contents01_contents">파일첨부 또는 파일 저장을 위해 사용</string>
    <string name="Permission_popup_contents02_title">카메라</string>
    <string name="Permission_popup_contents02_contents">사진 촬영을 위해 사용</string>
    <string name="Permission_popup_contents03_title">전화</string>
    <string name="Permission_popup_contents03_contents">통화상태에 대한 정보를 얻기 위해 사용</string>
    <string name="Permission_popup_contents04_title">마이크</string>
    <string name="Permission_popup_contents04_contents">음성통화를 위해 사용</string>
    <string name="Login_btn_login">로그인</string>
    <string name="Login_btn_id_find">아이디 찾기</string>
    <string name="Login_btn_registration">회원가입</string>
    <string name="Login_textbox_hint_id">아이디</string>
    <string name="Login_textbox_hint_pw">비밀번호</string>
    <string name="Login_btn_personal_info"><u>개인정보처리방침</u></string>
    <string name="Login_popup_id_input">아이디를 입력해주십시오.</string>
    <string name="Login_popup_pw_input">비밀번호를 입력해주십시오.</string>
    <string name="Login_popup_pw_fail">비밀번호 오류 입니다.\n다시 시도해주십시오.</string>
    <string name="Login_popup_id_fail">아이디 오류입니다.\n다시 시도해주십시오.</string>
    <string name="Login_popup_fail">로그인에 실패 하였습니다.</string>
    <string name="Login_popup_title_fail">로그인</string>
    <string name="Login_popup_title_certify">로그인</string>
    <string name="Login_popup_contents_certify">휴대폰 인증 페이지로\n이동합니다.</string>
    <string name="Login_popup_title_admin">로그인</string>
    <string name="Login_popup_contents_admin">관리자의 허가를\n기다리는 중 입니다.</string>
    <string name="Login_toast_out">종료하시려면 한번 더 누르세요.</string>
    <string name="Agree_title">약관안내</string>
    <string name="Agree_popup_service">이용 약관</string>
    <string name="Agree_popup_personal_info">개인정보 수집 및 이용 동의</string>
    <string name="Agree_check_all">전체 약관에 동의합니다.</string>
    <string name="Agree_check_service">(필수) 이용약관에 동의합니다.</string>
    <string name="Agree_check_personal_info">(필수) 개인정보 수집 및 이용에 동의합니다.</string>
    <string name="Agree_check_detail">상세보기</string>
    <string name="Agree_check_text">*필수 약관에 동의하지 않으면 경동원 홈네트워크 앱을 사용하실 수 없습니다.</string>
    <string name="Agree_check_next">완료</string>
    <string name="Agree_personal_info_title">\n㈜경동원 원격제어 서비스 개인정보 처리방침\n\n</string>
    <string name="Agree_personal_info_contents">1. 처리항목 및 목적\n\n회사는 다름의 목적을 위하여 다음 각 호의 개인정보 항목을 처리하고 있습니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며, 이용 목적이 변경되는 경우에는 정보통신망 이용촉진 및 정보보호 등에 관한 법률 제22조 등 관계 법령에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.\n\n1.1  처리항목(필수): 이름, 아이디, 전화번호(집 또는 휴대폰), 이메일, 설치 장소, 가동상태 정보, 에러발생시 에러 정보 및 상태정보\n1.2  처리목적: 회원가입, 제품에 대하여 스마트폰(태블릿 등)을 이용하여 원격제어를 할 수 있는 서비스 제공, 제품의 에러정보 및 상태정보 등을 통지하거나 이를 이용하여 이용고객의 사용패턴 분석, 제품 품질 개선, 제품에대한 서비스 품질 개선 등을 위한 자료로 활용, 제품 설치 및 서비스 완료 후 처리 만족도 조사 시행 시 활용\n\n※ 서비스 제공을 위해 필요한 최소한의 개인정보임으로 동의를 해 주세요 서비스 이용이 가능합니다.더 자세한 내용은 개인정보 처리방침과 약관 내용을 확인해주세요.\n※ 회사의 서비스 제공 등 계약의 이행에 필요한 경우 해당 위탁업무와 수탁자를 ‘개안정보 처리 방침’에 공개함으로써, 처리 위탁 동의에 갈음합니다.\n\n\n2. 이용 및 보유 기간\n\n2.1  회사는 법령에 따른 개인정보 보유•이용기간 또는 정보주체로부터 개인정보를 수집 시에 동의 받은 개인정보 보유•이용기간 내에서 개인정보를 처리, 보유 합니다.\n2.1  제1조에 듸해 수집된 개인 정보 처리 및 보유 기간은 다음 각 호와 같습니다.\n  2.2.1  회원가입 시 수집된 개인정보: 회원탈퇴 시까지 보유\n  2.2.2  ⌜전자상거래 등에서의 소비자에 관한 법률⌟에 따른 계약 또는 청약철회, 대금 걀제 및 재화 등의 공급기록 : 5년\n  2.2.3  ⌜통신비밀보호법⌟에 따른 통신사실 확인자료(컴퓨터 통신, 인터넷 로그기록자료, 접속지 추적자료) 보관 : 3개월\n2.3  회사는 ‘개인정보 유효기간제’에 따라 1년간 서비스를 이용하지 않은 회원의 개인정보를 별도로 분리 보관하여 관리합니다.</string>
    <string name="Agree_sevice_text_title">\n이용약관\n\n</string>
    <string name="Agree_sevice_text_contents">•	제1조 목적\n•	제2조 정의\n•	제3조 약관의 게시와 개정\n•	제4조 약관의 해석\n•	제5조 개인정보보호 의무\n•	제6조 이용고객에 대한 통지\n•	제7조 회사의 의무\n•	제8조 서비스의 제공 등\n•	제9조 서비스의 중단\n•	제10조 서비스의 종료\n•	제11조 서비스의 이용 및 제한\n•	제12조 정보의 제공 및 광고의 게재\n•	제13조 이용제한 등\n•	제14조 책임제한\n•	제15조 준거법 및 재판관할\n•	부칙\n\n\n제 1 조 (목 적)\n이 약관은 ㈜경동원(이하 &quot;회사&quot;)이 제공하는 관련 제반 서비스의 이용과 관련하여 “회사”와 “이용고객”의 권리, 의무 및 책임사항, 기타 필요한 사항을 규정함을 목적으로 합니다\n\n제 2 조 (정 의)\n이 약관에서 사용하는 용어의 정의는 다음과 같습니다.\n①	‘서비스’라 함은 회사가 제공하는 아래 각호의 1에 해당하는 것을 뜻합니다.\n1.	“이용고객”이 사용하는 제품에 대하여 스마트 폰을 이용하여 원격제어를 할 수 있는 서비스\n2.	제품에 대한 에러 발생시 에러정보와 보일러의 상태정보를 수집하여 이용고객에게 통지하는 서비스\n②	&quot;이용고객&quot;이라 함은 회사의 &quot;제품&quot;의 사용자로서 이 약관에 따라  &quot;회사&quot;가 제공하는 &quot;서비스&quot;를 이용하는 고객을 말합니다.\n③	‘이용계약’이라 함은 서비스 이용을 목적으로 “이용고객”이 본 약관에 동의한 후 회원가입을 하여 회사와 체결하는 계약을 의미합니다.\n④	‘고객정보’라 함은 이용고객이 서비스 이용 시 필요한 기본 고객정보를 의미합니다\n⑤	‘‘제품’ 이라 함은 이용고객이 회사로부터 구입하여 사용하는 원격제어가 가능한 경동원 비디오폰 또는 홈오토 또는 홈네트워크 제품을 의미합니다.\n⑥	&quot;비밀번호&quot;라 함은”이용고객”이 서비스를 이용하기 위하여 개인정보를 입력하고 서비스 이용 시 개인정보보호를 위해 &quot;이용고객&quot; 자신이 정한 문자 또는 숫자의 조합을 의미합니다.\n⑦	“아이디”라 함은 “이용고객”이 서비스를 이용하기 위하여 개인정보를 입력하고 서비스 이용 시 개인정보보호를 위해 “이용고객”자신을 식별하기 위한 문자 또는 숫자의 조합을 의미합니다.\n⑧	‘해지’라 함은 회사 또는 이용고객이 이용계약을 해약하는 것을 의미합니다\n\n제 3 조 (약관의 게시와 개정)\n①	&quot;회사&quot;는 이 약관의 내용을”이용고객”이 쉽게 알 수 있도록 서비스 초기 화면에 게시합니다.\n②	&quot;회사&quot;는 &quot;약관의규제에관한법률&quot;, &quot;정보통신망이용촉진및정보보호등에관한법률(이하 &quot;정보통신망법&quot;)&quot; 등 관련법을 위배하지 않는 범위에서 이 약관을 개정할 수 있습니다.\n③	&quot;회사&quot;가 약관을 개정할 경우에는 적용일자 및 개정사유를 명시하여 현행약관과 함께 제1항의 방식에 따라 그 개정약관의 적용일자 30일 전부터 적용일자 전일까지 공지합니다. 다만, 이용고객에게 불리한 약관의 개정의 경우에는 공지 외에 일정기간 서비스 내 전자우편, 전자쪽지 등의 전자적 수단을 통해 따로 명확히 통지하도록 합니다\n\n제 4 조 (약관의 해석)\n①	&quot;회사&quot;는 개별 서비스에 대해서는 별도의 이용약관 및 정책(이하 &quot;유료서비스약관 등&quot;)을 둘 수 있으며, 해당 내용이 이 약관과 상충할 경우에는 &quot;유료서비스약관 등&quot; 이 우선하여 적용됩니다.\n②	이 약관에서 정하지 아니한 사항이나 해석에 대해서는 관계법령 또는 상관례에 따릅니다.\n\n제 5 조 (고객정보 보호의무)\n①	&quot;회사&quot;는 &quot;개인정보보호법&quot; 등 관계 법령이 정하는 바에 따라 &quot;이용고객&quot;의 “고객정보”를 보호하기 위해 노력합니다.\n②	&quot;회사&quot;는 “이용고객”이 “서비스”를 이용하기 위하여 입력하거나 또는 “서비스”의 수행과정에서 수집하게 되는 “고객정보”를 보호하기 위해 노력하며, 이러한 정보의 항목과 수집목적 등에 대하여 개인정보 취급방침을 통하여 게시합니다.\n③	&quot;고객정보&quot;의 보호 및 사용에 대해서는 관련법 및 &quot;회사&quot;의 개인정보 취급방침이 적용됩니다. 다만, 본 약관에 의하여 &quot;회사&quot;가 제공하는 서비스 외에는 &quot;회사&quot;의 개인정보취급방침이 적용되지 않습니다.\n\n제 6 조 (&quot;이용고객&quot;에 대한 통지)\n&quot;회사&quot;가 &quot;이용고객&quot;에 대한 통지를 하는 경우 이 약관에 별도 규정이 없는 한 전자우편, 또는 PUSH 알람 등으로 할 수 있습니다.\n\n제 7 조 (&quot;회사&quot;의 의무)\n①	&quot;회사&quot;는 관련법과 이 약관이 금지하거나 미풍양속에 반하는 행위를 하지 않으며, 계속적이고 안정적으로 &quot;서비스&quot;를 제공하기 위하여 최선을 다하여 노력합니다.\n②	&quot;회사&quot;는 ”이용고객”이 안전하게 &quot;서비스&quot;를 이용할 수 있도록 개인정보(신용정보 포함)보호를 위해 보안시스템을 갖추어야 하며 개인정보 취급방침을 공시하고 준수합니다.\n③	&quot;회사&quot;는 서비스이용과 관련하여”이용고객”으로부터 제기된 의견이나 불만이 정당하다고 인정할 경우에는 이를 처리하여야 합니다. ”이용고객”이 제기한 의견이나 불만사항에 대해서는 전자우편 등을 통하여 &quot;이용고객&quot;에게 처리과정 및 결과를 전달합니다.\n\n제 8 조 (&quot;서비스&quot;의 제공 등)\n①	“회사”는 본 이용약관에 동의 한”이용고객”에 한하여 아래와 같은 서비스를 제공합니다.\n1.	원격제어 서비스 - 이용고객이 사용하는 제품에 대하여 스마트 폰을 이용하여 원격제어를 할 수 있는 서비스\n2.	에러상태 통지 서비스 - 제품에 대한 에러 발생시 에러정보와 보일러의 상태정보를 수집하여 이용고객에게 통지하는 서비스\n②	&quot;서비스&quot;는 연중무휴, 1일 24시간 무상으로 제공함을 원칙으로 합니다. 단, “서비스”의 제공이 3년을 경과한 경우, “회사”는 ‘유료서비스약관’을 두어 유료로 서비스를 제공할 수 있습니다.\n③	제1항의 에러상태 통지 서비스는 아래와 같이 제공됩니다.\n-	스마트 폰 앱을 통한 통지 : 제품에 에러가 발생하여 보수점검이 필요한 경우 “이용고객”의 스마트 폰의 앱을 통한 전자문서 방식으로 통지됩니다. 단, 본 통지는 “이용고객”이 스마트 폰의 앱에 로그인이 한 상태에 한하여 제공됩니다.\n④	“회사”는 “서비스”의 내용 및 방법 기타 일체의 사항을 스스로의 판단에 따라 변경할 수 있으며, 이 경우 변경된 서비스의 내용 및 방법 기타 일체의 사항들은 변경일자를 명시하여 그 변경일자 이전에 제 6조에서 정한 방법으로 통지합니다.\n\n제9조 (“서비스”의 중단)\n①	&quot;회사&quot;는 컴퓨터 등 정보통신설비의 정기점검, 보수점검, 교체 및 고장, 통신두절 또는 운영상 상당한 이유가 있는 경우 &quot;서비스&quot;의 제공을 일시적으로 중단할 수 있습니다. 이 경우 &quot;회사&quot;는 제7조에서 정한 방법으로 &quot;이용고객&quot;에게 통지합니다. 다만, &quot;회사&quot;가 사전에 통지할 수 없는 부득이한 사유가 있는 경우 사후에 통지할 수 있습니다.\n②	회사는 전 1항의 서비스의 중단으로 인하여 발생한 이용고객의 손해에 대하여 회사의 귀책사유에 의한 경우 이외에는 배상하지 않습니다.\n\n\n제 10 조 (&quot;서비스&quot;의 종료)\n&quot;회사&quot;는 아래 각 호에 해당하는 상당한 이유가 있는 경우에 운영상, 기술상의 필요에 따라 제공하고 있는 전부 또는 일부 &quot;서비스&quot;를 종료할 수 있습니다.\n1.	“회사”가 “제품”의 생산을 중단하는 경우\n2.	“이용고객”이 “서비스”를 이용하는 빈도수가 현저히 적은 경우\n3.	기타 “서비스”를 제공할 실익이 없거나, 불가피한 사정으로 인하여 제공할 수 없는 경우\n4.	“회사”가 APP 서비스를 전 항의 사유로 종료할 경우, APP 구입 비용에 대하여 환불해줄 의무는 없습니다. 단, 회사의 APP구입 정책에 따라 7일 이내의 경우 환불을 해 드립니다.\n\n제 11 조 (“서비스”의 이용 및 제한)\n①	“이용고객”은 스마트 폰의 앱에 “서비스”의 제공에 필요한 “고객정보”를 입력한 후 로그인을 하여 “서비스”를 이용할 수 있습니다.\n②	“이용고객”이 제1항에 의하여 입력하는 “고객정보”는 다음과 같습니다.\n1.	이용고객의 실명\n2.	이용고객의 전화번호 혹은 휴대전화번호\n3.	이용고객의 이메일 주소\n4.	이용고객의 아이디 / 패스워드\n③	“이용고객”은 “서비스”를 이용하기 위하여 본 이용약관 및 개인정보 취급방침에 동의하여야 하고, 동의하지 않을 경우 “서비스”이용에 제한이 있을 수 있습니다.\n④	“이용고객”은 “회사”가 제공하는 서비스를 이용하기 위하여 스마트 폰, 와이파이 등 정보통신이 가능한 장비 및 시설을 구비하여야 합니다.\n⑤	 “이용고객”은 “회사”의 업무상, 기술상 특별한 지장이 없는 한 연중무휴1일 24시간 이용할 수 있습니다. 단, “회사”는 사이트의 정기점검, 보수점검, 교체 및 고장, 통신두절 또는 운영상 상당한 이유가 있는 경우 “이용고객”에게 사전 통지 한 후 제한할 수 있으며, 통지의 방법은 본 이용약관 제6조에 의합니다.\n⑥	“이용고객”이1년 이상 “서비스”를 사용하지 않은 경우 “이용고객”의 아이디는 휴면 아이디로 변경되며, 이러한 경우 재 사용을 원할 경우 재등록 후 서비스 이용이 가능합니다.\n⑦	“이용고객”이 제품을 분실, 도난, 파손등의 사유로 정상적인 서비스를 유지하기 어려울 경우, “이용 고객”의 요청에 의해 등록된 “이용고객” 정보를 삭제 및 서비스를 중지 할 수 있습니다. 단, 이 경우 이미 지불된 APP 결제 금액에 대하여 회사는 환불해 줄 의무는 없습니다.\n\n제 12 조 (정보의 제공 및 광고의 게제)\n①	&quot;회사&quot;는 ”이용고객”이 &quot;서비스&quot; 이용 중 필요하다고 인정되는 다양한 정보를 전자우편 등의 방법으로 &quot;이용고객&quot;에게 제공할 수 있습니다.\n②	제1항의 정보를 전화 및 이동통신기기에 의하여 전송하려고 하는 경우에는 &quot;이용고객&quot;의 사전 동의를 받아서 전송합니다.\n③	&quot;회사&quot;는 &quot;서비스&quot;의 운영과 관련하여 서비스 화면, 홈페이지, 전자우편 등에 광고를 게재할 수 있습니다. 광고가 게재된 전자우편을 수신한 &quot;이용고객&quot;는 수신거절을 &quot;회사&quot;에게 할 수 있습니다.\n\n제 13 조 (이용제한 등)\n①	&quot;회사&quot;는 ”이용고객”이 이 약관의 의무를 위반하거나 &quot;서비스&quot;의 정상적인 운영을 방해한 경우, 경고, 일시정지, 영구이용정지 등으로 &quot;서비스&quot; 이용을 단계적으로 제한할 수 있습니다. 다만, 이 경우 “회사”는 기존  APP 결제 금액에 대하여 환불해 줄 의무가 없으나, 회사의 APP구입 정책에 따라 7일 이내에 청약철회를 요구하는 경우 환불 할 수 있습니다.\n②	 본 조에 따라 &quot;서비스&quot; 이용을 제한하는 경우에는 &quot;회사&quot;는 제6조에 따라 통지합니다.\n③	”이용고객”은 본 조에 따른 이용제한 등에 대해 이의신청을 할 수 있습니다. 이 때 이의가 정당하다고 &quot;회사&quot;가 인정하는 경우 &quot;회사&quot;는 즉시 &quot;서비스&quot;의 이용을 재개합니다.\n\n제 14 조 (책임제한)\n①	&quot;회사&quot;는 천재지변 또는 이에 준하는 불가항력으로 인하여 &quot;서비스&quot;를 제공할 수 없는 경우에는 &quot;서비스&quot; 제공에 관한 책임이 면제됩니다.\n②	&quot;회사&quot;는 “이용고객”소유의 공유기 또는 인터넷 망의 문제, 혹은 스마트 폰의 분실 또는 아이디/ 비밀번호의 유출 등 ”이용고객”의 귀책사유로 인하여 발생한 &quot;서비스&quot; 이용의 장애에 대하여는 책임을 지지 않습니다.\n\n제 15 조 (준거법 및 재판관할)\n①	&quot;회사&quot;와 ”이용고객”간에 제기된 소송은 대한민국법을 준거법으로 합니다.\n②	&quot;회사&quot;와 ”이용고객”간에 발생한 분쟁에 관한 소송은 서울중앙지방법원을 관할로 합니다.\n\n부칙\n1. 이 약관은 2019년 7월 26일부터 적용됩니다.\n</string>
    <string name="Regist_textbox_hint_id">아이디</string>
    <string name="Regist_textbox_hint_pw">비밀번호</string>
    <string name="Regist_textbox_hint_pw_confirm">비밀번호 확인</string>
    <string name="Regist_textbox_hint_name">이름</string>
    <string name="Regist_textbox_hint_phone">핸드폰 번호</string>
    <string name="Regist_textbox_hint_dong">동 번호</string>
    <string name="Regist_textbox_hint_ho">호 번호</string>
    <string name="Regist_btn_duplication">중복확인</string>
    <string name="Regist_btn_registsuccess">회원가입 완료</string>
    <string name="Regist_popup_reg_title">회원가입</string>
    <string name="Regist_popup_id_input">아이디를 입력해주십시오.</string>
    <string name="Regist_popup_ho_input">호 번호를 입력해주십시오.</string>
    <string name="Activity_Name_Setting">설정</string>
    <string name="Activity_Back">Back</string>
    <string name="Version_title">버전정보</string>
    <string name="Version_textview_now_ver">현재 버전 </string>
    <string name="Version_textview_new_ver">최신 버전 </string>
    <string name="Version_btn_new_ver">최신 버전 받기</string>
</resources>