<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.kd.One.Login.PermissionCheckActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:orientation="vertical"
        android:background="@drawable/shape_solid_corner"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="21dp"></LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Permission_popup_title"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="16dp"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/shape_solid_corner"
            android:backgroundTint="@color/colorfafafa"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="14dp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/Permission_popup_ticker"
                    android:gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_permission_storage"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="12dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Permission_popup_contents01_title"
                        android:textColor="@color/colorBlack"
                        android:textSize="12dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Permission_popup_contents01_contents"
                        android:textSize="10dp"
                        android:textColor="@color/color585858"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_permission_camera"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="12dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Permission_popup_contents02_title"
                        android:textColor="@color/colorBlack"
                        android:textSize="12dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Permission_popup_contents02_contents"
                        android:textSize="10dp"
                        android:textColor="@color/color585858"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_permission_phone"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="12dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Permission_popup_contents03_title"
                        android:textColor="@color/colorBlack"
                        android:textSize="12dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Permission_popup_contents03_contents"
                        android:textSize="10dp"
                        android:textColor="@color/color585858"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_permission_record"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="12dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Permission_popup_contents04_title"
                        android:textColor="@color/colorBlack"
                        android:textSize="12dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Permission_popup_contents04_contents"
                        android:textSize="10dp"
                        android:textColor="@color/color585858"/>
                </LinearLayout>
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"></LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="26dp"></LinearLayout>

        <Button
            android:id="@+id/btn_permission_check_next"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/shape_solid_corner"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="@string/Popup_confirm"
            android:textSize="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="16dp"></LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_product"
        android:textColor="@color/colorWhite"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:textSize="8dp"
        android:textStyle="bold"
        android:layout_marginBottom="34.6dp"/>
</FrameLayout>
