<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:elevation="0.5dp">

        <LinearLayout
            android:id="@+id/Agree_Lin_Back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="OnClickBtnAgree">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_back"
                android:paddingLeft="16dp"
                android:tint="@color/colorPrimary"/>

            <TextView
                android:id="@+id/Agree_Txt_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/Activity_Name_Setting"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/Agree_Txt_main_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Agree_title"
            android:paddingLeft="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/Activity_Back"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            android:visibility="invisible"/>

        <Button
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn_arrow"
            android:enabled="false"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorfafafa"></LinearLayout>

    <LinearLayout
        android:id="@+id/linear_agree_tab_visible"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:weightSum="100">
            <TextView
                android:id="@+id/txt_agree_tab01"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center"
                android:background="@color/colorWhite"
                android:textSize="16dp"
                android:text="@string/Agree_popup_service"
                android:textColor="@color/colorPrimary"
                android:onClick="OnClickBtnAgree"/>

            <TextView
                android:id="@+id/txt_agree_tab02"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center"
                android:background="@color/colorWhite"
                android:textSize="16dp"
                android:text="@string/Agree_popup_personal_info"
                android:textColor="@color/colorBlack"
                android:onClick="OnClickBtnAgree"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:weightSum="100">
            <LinearLayout
                android:id="@+id/linear_agree_tab01"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:background="@color/colorPrimary"></LinearLayout>

            <LinearLayout
                android:id="@+id/linear_agree_tab02"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:background="@color/colorPrimary"
                android:visibility="invisible"></LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_agree_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="14dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textColor="@color/colorBlack"
                    android:visibility="gone"
                    android:text="@string/Agree_sevice_text_title"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/Agree_sevice_text_contents"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_agree_personal_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="14dp"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:textColor="@color/colorBlack"
                    android:visibility="gone"
                    android:text="@string/Agree_personal_info_title"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/Agree_personal_info_contents"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>