<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorWhite"
        android:elevation="0.5dp"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/Version_Lin_Back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="OnClickBtnVersion">
            <ImageView
                android:layout_width="40dp"
                android:paddingLeft="16dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_back"
                android:tint="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/Activity_Name_Setting"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp"/>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Version_title"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            android:paddingLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/Activity_Back"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/Version_Btn_Menu"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn_list"
            android:onClick="OnClickBtnVersion"
            android:visibility="invisible"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="46dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:src="@drawable/ic_version_logo"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="67dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Version_textview_now_ver"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/Version_TextView_NowVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Version_textview_new_ver"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/Version_TextView_NewVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="43dp">

                <Button
                    android:id="@+id/Version_Btn_Version"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:onClick="OnClickBtnVersion"
                    android:text="@string/Version_btn_new_ver"
                    android:textColor="@color/colorWhite"
                    android:textSize="16dp"
                    android:background="@drawable/shape_solid_corner"
                    android:backgroundTint="@color/colorPrimary"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>